--- a/hello-api/pom.xml
+++ b/hello-api/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>dubbo-demo</artifactId>
+        <artifactId>dubbo-hello-demo</artifactId>
         <groupId>com.test</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
